# am64xx-reset-cause

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: debian-linux-reference-build.yml
src/: CMakeLists.txt  main.c
src/am64xx/: am64xx-reset-reg.c  am64xx-reset-reg.h
